# Ditto

./: .gitignore  README.md
applications/: README.md
applications/memcached-1.6.9/: Makefile.in  config.h  config.status  configure  memcached_debug-cache.gcno  memcached_debug-daemon.gcno  memcached_debug-extstore.gcno  memcached_debug-items.gcno  memcached_debug-itoa_ljust.gcno  memcached_debug-jenkins_hash.gcno  memcached_debug-logger.gcno  memcached_debug-murmur3_hash.gcno  memcached_debug-proto_text.gcno  memcached_debug-restart.gcno  memcached_debug-slab_automove.gcno  memcached_debug-storage.gcno  memcached_debug-thread.gcno  memcached_debug-util.gcno  sizes
applications/memcached-1.6.9/.deps/: memcached-authfile.Po  memcached-cache.Po  memcached-crc32c.Po  memcached-extstore.Po  memcached-logger.Po  memcached-murmur3_hash.Po  memcached-proto_bin.Po  memcached-proto_text.Po  memcached-slab_automove.Po  memcached-slab_automove_extstore.Po  memcached-slabs.Po  memcached-stats_prefix.Po  memcached-util.Po  memcached_debug-assoc.Po  memcached_debug-bipbuffer.Po  memcached_debug-cache.Po  memcached_debug-crawler.Po  sizes.Po  (+13 more)
applications/nginx-1.20.1/: Makefile
applications/redis-6.2.6/: redis.conf
applications/synthetic_memcached/: README.md  assembly.cpp  config.h  service.cpp  service.h  syn_memcached  utils.cpp  utils.h
applications/synthetic_nginx/: README.md  assembly.cpp  main.cpp  makefile  syn_nginx
applications/synthetic_redis/: README.md  assembly.cpp  makefile  syn_redis
applications/workloads/: redis_ycsb.txt  syn-redis_ycsb.txt
assembly_analysis/: README.md  assembly_generator.py  generator.py  profiling_configs.json  run_sde.py  run_valgrind.py
assembly_analysis/analyzers/: base_analyzer.py  branch_analyzer.py  data_dependency_analyzer.py  dcache_analyzer.py  icache_analyzer.py  inst_mix_analyzer.py  instruction_analyzer.py
assembly_analysis/asmdb/: x86data.json
backbone_analysis/: README.md  analyze.py  analyze_cluster.py  analyze_network_model.py  analyze_syscall.py  profiling_configs.json  run_profiling.py  stackcollapse-perf.pl  threads.stp
backbone_analysis/tree-similarity/: tree_distance
backbone_analysis/tree-similarity/src/tree-similarity/src/tree_distance/: CMakeLists.txt  main.cpp
client/mutated/: .clang-format  .gitignore  .vimrc.vim  AUTHORS  HTTP.md  LICENSE  Makefile.am  README.md  TODO.md  autogen.sh  configure.ac  debug-build.sh
client/mutated/client/: .gitignore  Makefile.am  accum.cc  accum.hh  buffer.hh  client.cc  client.hh  endian.hh  gen_memcache.cc  gen_memcache.hh  gen_synthetic.cc  gen_synthetic.hh  generator.hh  limits.hh  linux_compat.hh  load_memcache.cc  load_memcache.hh  memcache.hh  mutated_memcache.cc  mutated_synthetic.cc  opts.hh  opts_memcache.cc  opts_synthetic.cc  results.hh  socket_buf.cc  socket_buf.hh  socket_vec.cc  socket_vec.hh  test1.cc  util.hh
client/mutated/m4/: ax_cxx_compile_stdcxx_14.m4
client/mutated/scripts/: coord.go
memcached-1.6.9/: Makefile  memcached  memcached-debug  memcached.c  memcached_debug-assoc.gcno  memcached_debug-authfile.gcno  memcached_debug-bipbuffer.gcno  memcached_debug-crawler.gcno  memcached_debug-crc32c.gcno  memcached_debug-hash.gcno  memcached_debug-memcached.gcno  memcached_debug-proto_bin.gcno  memcached_debug-slab_automove_extstore.gcno  memcached_debug-slabs.gcno  memcached_debug-stats_prefix.gcno  testapp  timedrun
memcached-1.6.9/.deps/: cache.Po  crc32c.Po  jenkins_hash.Po  memcached-assoc.Po  memcached-bipbuffer.Po  memcached-crawler.Po  memcached-daemon.Po  memcached-hash.Po  memcached-items.Po  memcached-itoa_ljust.Po  memcached-jenkins_hash.Po  memcached-memcached.Po  memcached-restart.Po  memcached-storage.Po  memcached-thread.Po  memcached_debug-authfile.Po  memcached_debug-crc32c.Po  memcached_debug-daemon.Po  memcached_debug-hash.Po  memcached_debug-items.Po  memcached_debug-itoa_ljust.Po  memcached_debug-memcached.Po  memcached_debug-slab_automove_extstore.Po  memcached_debug-slabs.Po  memcached_debug-thread.Po  memcached_debug-util.Po  murmur3_hash.Po  stats_prefix.Po
memcached-1.6.9/autom4te.cache/: output.0  requests  traces.1
memcached-1.6.9/doc/: Makefile  Makefile.in
network_skeleton/: README.md  assembly.cpp  makefile
network_skeleton/connection/: tcp_conn.cpp  tcp_conn.h
synthetic_memcached/: makefile
synthetic_memcached/connection/: tcp_conn.cpp
synthetic_memcached/lock/: locker.h
synthetic_memcached_skeleton/: config.cpp  service.cpp  syn_memcached
synthetic_memcached_skeleton/connection/: tcp_conn.cpp
valgrind/cachegrind/: cg_arch.c
(+27 files in other folders)
